# sjsp

./: Cargo.toml
crates/pjs-bench/benches/: zero_copy_bench.rs
crates/pjs-bench/src/: lib.rs
crates/pjs-core/: Cargo.toml
crates/pjs-core/examples/: compression_demo.rs  gat_performance_showcase.rs  object_pool_performance.rs  simple_priority_demo.rs  zero_copy_demo.rs
crates/pjs-core/src/: config.rs  error.rs  frame.rs  lib.rs  security.rs
crates/pjs-core/src/application/: mod.rs  shared.rs
crates/pjs-core/src/application/commands/: mod.rs
crates/pjs-core/src/application/dto/: event_dto.rs  json_path_dto.rs  mod.rs  priority_dto.rs  session_id_dto.rs  stream_id_dto.rs
crates/pjs-core/src/application/handlers/: command_handlers.rs  query_handlers.rs
crates/pjs-core/src/application/queries/: mod.rs
crates/pjs-core/src/application/services/: event_service.rs  mod.rs  optimization_service.rs  performance_analysis_service.rs  prioritization_service.rs  stream_context.rs
crates/pjs-core/src/compression/: mod.rs  secure.rs
crates/pjs-core/src/config/: security.rs
crates/pjs-core/src/domain/: mod.rs
crates/pjs-core/src/domain/aggregates/: stream_session.rs
crates/pjs-core/src/domain/entities/: frame.rs  stream.rs
crates/pjs-core/src/domain/events/: mod.rs
crates/pjs-core/src/domain/ports/: gat.rs  mod.rs  repositories.rs  writer.rs
crates/pjs-core/src/domain/services/: connection_manager.rs  gat_orchestrator.rs  mod.rs  priority_service.rs  streaming_orchestrator.rs
crates/pjs-core/src/domain/value_objects/: json_data.rs  json_path.rs  priority.rs  session_id.rs  stream_id.rs
crates/pjs-core/src/infrastructure/: mod.rs
crates/pjs-core/src/infrastructure/adapters/: event_publisher.rs  gat_memory_repository.rs  json_adapter.rs  memory_repository.rs  metrics_collector.rs  mod.rs
crates/pjs-core/src/infrastructure/http/: axum_adapter.rs  axum_extension.rs  middleware.rs  mod.rs  streaming.rs
crates/pjs-core/src/infrastructure/integration/: mod.rs  object_pool.rs  simd_acceleration.rs  streaming_adapter.rs  universal_adapter.rs
crates/pjs-core/src/infrastructure/repositories/: memory.rs  mod.rs
crates/pjs-core/src/infrastructure/services/: mod.rs  session_manager.rs  timeout_monitor.rs
crates/pjs-core/src/infrastructure/websocket/: client.rs  mod.rs  security.rs  server.rs
crates/pjs-core/src/memory/: arena.rs  mod.rs
crates/pjs-core/src/parser/: allocator.rs  buffer_pool.rs  hybrid.rs  mod.rs  simd_zero_copy.rs  simple.rs  sonic.rs  zero_copy.rs
crates/pjs-core/src/parser/simd/: mod.rs
crates/pjs-core/src/security/: compression_bomb.rs  rate_limit.rs
crates/pjs-core/src/stream/: compression_integration.rs  mod.rs  reconstruction.rs
crates/pjs-core/tests/: performance_tests.rs  security_comprehensive.rs  zero_copy_integration_test.rs
crates/pjs-demo/src/: lib.rs
crates/pjs-demo/src/data/: analytics.rs  ecommerce.rs  mod.rs  realtime.rs  social.rs
crates/pjs-demo/src/servers/: interactive_demo.rs  simple_demo.rs  websocket_streaming.rs
crates/pjs-demo/src/utils/: mod.rs
tests/: websocket_security.rs
