[workspace]
members = ["crates/pjs-core", "crates/pjs-bench", "crates/pjs-demo"]
resolver = "2"

[workspace.package]
homepage = "https://github.com/bug-ops/pjs"
documentation = "https://docs.rs/pjson-rs"
version = "0.4.1"
authors = ["Andrei G. <k05h31@gmail.com>"]
readme = "README.md"
edition = "2024"
rust-version = "1.89"
publish = false
license = "MIT OR Apache-2.0"
repository = "https://github.com/bug-ops/pjs"
description = "Priority JSON Streaming Protocol - high-performance priority-based JSON streaming library (requires nightly Rust)"
keywords = ["json", "streaming", "simd", "performance", "protocol"]
categories = ["encoding", "network-programming", "parser-implementations"]

[workspace.dependencies]
ahash = "0.8"
async-std = "1.12"
async-trait = "0.1"
axum = "0.8"
bitflags = "2.9"
bumpalo = "3.14"
bytemuck = "1.14"
bytes = "1.5"
clap = "4.4"
chrono = "0.4"
criterion = "0.7"
crossbeam = "0.8"
dashmap = "6.1"
fake = "4.4"
futures = "0.3"
hyper = "1.6"
maplit = "1.0"
memchr = "2.6"
once_cell = "1.21"
parking_lot = "0.12"
priority-queue = "2.0"
prometheus = "0.14"
proptest = "1.4"
rand = "0.9"
rayon = "1.11"
reqwest = "0.12"
serde = "1.0"
serde_json = "1.0"
sha2 = "0.10"
simd-json = "0.15"
smallvec = "1.11"
socket2 = "0.6"
sonic-rs = "0.5"
thiserror = "2.0"
tokio = "1.35"
tokio-tungstenite = "0.27"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1"
tracing-subscriber = "0.3"
typed-arena = "2.0"
url = "2.5"
uuid = "1.18"
tikv-jemallocator = "0.6"
tikv-jemalloc-ctl = "0.6"
mimalloc = "0.1"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"
debug = true
