[package]
name = "pjson-rs"
version = { workspace = true }
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
license = { workspace = true }
repository = { workspace = true }
description = "Priority JSON Streaming Protocol - high-performance priority-based JSON streaming (requires nightly Rust)"
keywords = { workspace = true }
categories = { workspace = true }
readme = { workspace = true }
exclude = ["/target", "/benches", "/tests", "examples/*"]
publish = true

[dependencies]
async-std = { workspace = true, features = ["attributes"] }
async-trait = { workspace = true }
axum = { workspace = true, optional = true, features = ["ws"] }
bitflags = { workspace = true }
bytes = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
crossbeam = { workspace = true }
dashmap = { workspace = true }
futures = { workspace = true, optional = true }
maplit = { workspace = true }
once_cell = { workspace = true }
parking_lot = { workspace = true }
priority-queue = { workspace = true }
prometheus = { workspace = true, optional = true }
rayon = { workspace = true }
reqwest = { workspace = true, features = ["json"], optional = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
smallvec = { workspace = true, features = ["serde", "union", "const_generics"] }
sonic-rs = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite = { workspace = true, optional = true }
tower = { workspace = true, optional = true }
typed-arena = { workspace = true }
tower-http = { workspace = true, features = ["cors", "trace"], optional = true }
url = { workspace = true, optional = true }
uuid = { workspace = true, features = ["v4", "serde"] }

# Memory allocator dependencies
tikv-jemallocator = { workspace = true, optional = true }
tikv-jemalloc-ctl = { workspace = true, optional = true }
mimalloc = { workspace = true, optional = true }

[dev-dependencies]
serde_json = { workspace = true }
tokio = { workspace = true, features = ["test-util"] }

[features]
default = ["simd-auto"]

# SIMD features
simd-auto = []   # Auto-detect best SIMD
simd-sse42 = []  # SSE 4.2 support
simd-avx2 = []   # AVX2 support  
simd-avx512 = [] # AVX-512 support
simd-neon = []   # ARM NEON support

# Memory allocator features (mutually exclusive)
jemalloc = ["dep:tikv-jemallocator", "dep:tikv-jemalloc-ctl"]
mimalloc = ["dep:mimalloc"]
# system allocator is the default (no deps needed)

# Optional features (will be added later)
# gpu = ["dep:cudarc", "dep:wgpu"]
schema-validation = []
compression = []

# Infrastructure features
http-server = ["dep:axum", "dep:tower", "dep:tower-http", "dep:futures"]
websocket-client = ["dep:tokio-tungstenite", "dep:url"]
websocket-server = [
    "http-server",
] # WebSocket server requires HTTP server features
http-client = ["dep:reqwest"]
prometheus-metrics = ["dep:prometheus"]

[package.metadata.cargo-udeps.ignore]
normal = ["axum", "tower", "tower-http", "hyper", "futures", "sha2"]

[[example]]
name = "simple_priority_demo"
required-features = []

[[example]]
name = "zero_copy_demo"
required-features = []

# TODO: Fix websocket_streaming example after infrastructure module fixes
# [[example]]
# name = "websocket_streaming"
# required-features = ["http-server"]

# Benchmarks will be implemented later
# [[bench]]
# name = "simd_parsing"
# harness = false
# 
# [[bench]]
# name = "memory_pools"
# harness = false
